--- a/tox.ini
+++ b/tox.ini
@@ -9,10 +9,15 @@ python =
 
 [testenv]
 package = wheel
+allowlist_externals = pytest
 setenv =
     PYTHONPATH = {toxinidir}
 deps =
     -r{toxinidir}/requirements_dev.txt
+	pytest
+	pytest-cov
+	async_upnp_client
+	pytest-asyncio
 commands =
     pytest --cov-report html:htmlcov/pytest --basetemp={envtmpdir}
 
@@ -23,6 +28,7 @@ commands =
     ruff format --verbose src tests
 
 [testenv:mypy]
+allowlist_externals = mypy
 deps =
     -r{toxinidir}/requirements_dev.txt
 commands = mypy --install-types --non-interactive src
