--- a/tox.ini
+++ b/tox.ini
@@ -31,4 +31,4 @@ commands =
 allowlist_externals = mypy
 deps =
     -r{toxinidir}/requirements_dev.txt
-commands = mypy --install-types --non-interactive src
+commands = mypy --install-types --non-interactive --verbose src
