--- a/tox.ini
+++ b/tox.ini
@@ -31,4 +31,5 @@ commands =
 allowlist_externals = mypy
 deps =
     -r{toxinidir}/requirements_dev.txt
+	mypy
 commands = mypy --install-types --non-interactive --verbose src
