Add missing library

--- a/tox.ini
+++ b/tox.ini
@@ -32,4 +32,8 @@ allowlist_externals = mypy
 deps =
     -r{toxinidir}/requirements_dev.txt
 	mypy
+	types-aiohttp
+	aiohttp 
+	async-upnp-client 
+	zeroconf
 commands = mypy --install-types --non-interactive --verbose src
