--- a/tox.ini
+++ b/tox.ini
@@ -32,8 +32,7 @@ allowlist_externals = mypy
 deps =
     -r{toxinidir}/requirements_dev.txt
 	mypy
-	types-aiohttp
 	aiohttp 
 	async-upnp-client 
 	zeroconf
-commands = mypy --install-types --non-interactive --verbose src
+commands = mypy --install-types --non-interactive src
